# BitWizzard

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
plugin/: definitions.hpp  processor.cpp  processor.hpp
plugin/WDLex/: resampleMOD.cpp  resampleMOD.h
